Fix button spacing in Register box

--- a/modules/core/client/css/party-up-style.css
+++ b/modules/core/client/css/party-up-style.css
@@ -111,8 +111,9 @@ body {
     -webkit-border-top-left-radius:5px;
 }
 
-div#buttons {
-	margin: 0 auto;
+#buttons {
+	text-align: center;
+	margin-top: 10px;
 }
 
 /* Header Search Bar */
